--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </main>
 
 <footer class="footer-bar">
-    <div class="footer-bar-contener">
+    <div class="footer-bar-container">
         <ul>
             <li>Github icon</li>
             <li>LinkedIn logo</li>
