Add image to header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <header class="navigation">
     <div class="navigation-contener">
-        <p class="navigation-logo"><a href="#intro">Andrzej Puzyński logo</a></p>
+        <p class="navigation-logo">
+            <a href="#intro">
+                <img src="img/andrzej.jpg"" alt="">
+            </a>
         <nav class="navigation-buttons">
             <ul>
                 <li><a href="#about-me">About Me</a></li>
