Fix elements in header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header class="navigation">
-    <div class="navigation-contener">
+    <div class="navigation-container">
         <p class="navigation-logo">
             <a href="#intro">
                 <img src="img/andrzej.jpg"" alt="">
