Add background image
add linked background image
styling intro page

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <main class="content">
     <section id="intro">
         <div class="intro">
-            <h1>ANDRZEJ PUZYŃSKI</h1>
-            <h2>Portfolio</h2>
+            <h1>Andrzej Puzyński</h1>
+            <h2>| PORTFOLIO |</h2>
         </div>
     </section>
 
