--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <section id="about-me" class="about-me">
         <h2>ABOUT ME</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <p>What I like the most is relationships with people. I also value peace, which I find in concentration during work. I like to look at life from different perspectives.</p>
         <h3>Experience</h3>
         <ul>
             <li>Lorem ipsum dolor sit amet, consectetur.</li>
@@ -81,12 +81,39 @@
             <li>Lorem ipsum dolor sit amet, consectetur.</li>
         </ul>
         <h3>Skills</h3>
-        <ul>
-            <li>Lorem ipsum: 20%</li>
-            <li>Lorem ipsum: 40%</li>
-            <li>Lorem ipsum: 60%.</li>
-            <li>Lorem ipsum: 80%.</li>
-            <li>Lorem ipsum: 90%.</li>
+        <ul id="skills">
+            <li>Advanced
+                <div>
+                <img src="./img/indesign-cc.svg">
+                <img src="./img/adobe-illustrator-cc.svg">
+                <img src="./img/photoshop-cc.svg">
+                <img src="./img/adobe-acrobat-pro.svg">
+                </div>
+            </li>
+            <li>Improved
+                <div>
+                    <img src="./img/html.png">
+                    <img src="./img/css.png">
+                    <img src="./img/js.png">
+                    <img src="./img/jquery.png">
+                    <img src="./img/react.png">
+                    <img src="./img/git.png">
+                </div>
+            </li>
+            <li>For fun
+                <div>
+                    <img src="./img/finale-logo.png">
+                    <img src="./img/sigil-logo.png">
+                </div>
+            </li>
+            <li>Badges
+                <div>
+                    <a href="https://www.codewars.com/users/andrzejpuzynski/badges/large" target="_blank">
+                        <img src="https://www.codewars.com/users/andrzejpuzynski/badges/large" border="0">
+                    </a>
+                </div>
+            </li>
+
         </ul>
     </section>
 
