Removing and changing texts, fixing layouts

--- a/index.html
+++ b/index.html
@@ -67,19 +67,9 @@
 
     <section id="about-me" class="about-me">
         <h2>ABOUT ME</h2>
-        <p>What I like the most is relationships with people. I also value peace, which I find in concentration during work. I like to look at life from different perspectives.</p>
-        <h3>Experience</h3>
-        <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-        </ul>
-        <h3>Education</h3>
-        <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-        </ul>
+        <p>"I like it". "Woow" or "This is cool"<br>
+            These are the effects of the work I like to achieve.<br>
+            Now also as a Front-End Developer.</p>
         <h3>Skills</h3>
         <ul id="skills">
             <li>Advanced
@@ -87,7 +77,6 @@
                 <img src="./img/indesign-cc.svg">
                 <img src="./img/adobe-illustrator-cc.svg">
                 <img src="./img/photoshop-cc.svg">
-                <img src="./img/adobe-acrobat-pro.svg">
                 </div>
             </li>
             <li>Improved
@@ -97,7 +86,6 @@
                     <img src="./img/js.png">
                     <img src="./img/jquery.png">
                     <img src="./img/react.png">
-                    <img src="./img/git.png">
                 </div>
             </li>
             <li>For fun
@@ -115,36 +103,31 @@
             </li>
 
         </ul>
+        <div class="clear"></div>
     </section>
+
 
     <section id="portfolio" class="portfolio">
         <h2>MY PORTFOLIO</h2>
         <ul>
             <li>
                 <a href="http://dreamers.jfdz6.is-academy.pl/index.html">Dreamers site Page</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam magnam maiores nostrum quaerat sapiente. Ad deleniti itaque libero quibusdam soluta.</p>
+                <p>Team project. It was created during the Junior Front-End Developer course at <a href="http://infoshareacademy.com/">infoShare Academy.</p>
             </li>
             <li>
-                <a href="https://andrzejpuzynski.github.io">My Portfolio Page</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam magnam maiores nostrum quaerat sapiente. Ad deleniti itaque libero quibusdam soluta.</p>
+                <a href="https://andrzejpuzynski.github.io/jQuery-game/">jQuery game</a>
+                <p>Individual project existing in a team project. It was created during the Junior Front-End Developer course at <a href="http://infoshareacademy.com/">infoShare Academy.</p>
+            </li>
+            <div class="clear"></div>
+            <li>
+                <a>eBooks</a>
+                <p>For several years I have been participating in the project <a href="http://www.szortal.com/nawynos">"Szortal na Wynos"</a>. I prepare the monthly magazine in three formats: PDF, EPUB and MOBI.</p>
             </li>
             <li>
-                <a>Szortal Wydanie Specjalne site Page.</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam magnam maiores nostrum quaerat sapiente. Ad deleniti itaque libero quibusdam soluta.</p>
+                <a>DTP and graphics</a>
+                <p>My previous work: the composition of magazines, books, preparing illustrations and graphics for them (also the composition of music notes).</p>
             </li>
-            <li>
-                <a href="http://www.szortal.com/nawynos">Szortal Na Wynos - eBooks</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam magnam maiores nostrum quaerat sapiente. Ad deleniti itaque libero quibusdam soluta.</p>
-            </li>
-            <li>
-                <a>Books.</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam magnam maiores nostrum quaerat sapiente. Ad deleniti itaque libero quibusdam soluta.</p>
-            </li>
-            <li>
-                <a>Notes</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam magnam maiores nostrum quaerat sapiente. Ad deleniti itaque libero quibusdam soluta.</p>
-            </li>
-        </ul>
+            <div class="clear"></div>
     </section>
 
     <section id="contact-me" class="contact-me">
