--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Andrzej Puzynski - PERSONAL PORTFOLIO</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
+    <script src="https://use.fontawesome.com/b21321acbe.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
@@ -137,11 +138,21 @@
 <footer class="footer-bar">
     <div class="footer-bar-container">
         <ul>
-            <li>Github icon</li>
-            <li>LinkedIn logo</li>
-            <li>Facebook Logo</li>
+            <li>
+                <a href="https://github.com/andrzejpuzynski/">
+                    <i class="fa fa-github-square fa-lg " aria-hidden="true"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://pl.linkedin.com/in/andrzejpuzynski88">
+                    <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
+                </a>
+            </li>
+            <li>
+                <p>© Andrzej Puzyński 2017</p>
+            </li>
         </ul>
-        <p>© Andrzej Puzyński 2017</p>
+        <!--<p>© Andrzej Puzyński 2017</p>-->
     </div>
 </footer>
 
