--- a/index.html
+++ b/index.html
@@ -125,13 +125,12 @@
 
     <section id="contact-me" class="contact-me">
         <h2>CONTACT ME</h2>
-        <form ction="https://formspree.io/andrzejpuzynski@tlen.pl" method="POST">
+        <form action="https://formspree.io/andrzejpuzynski@tlen.pl" method="POST">
             <input type="text" name="name" id="firstname" placeholder="Your name" required="">
-            <input type="email" name="_replyto" id="email" placeholder="Your e-mail" required="">
+            <input type="email" name="email" id="email" placeholder="Your e-mail" required="">
             <input type="hidden" name="_subject" value="New submission!" />
             <textarea rows="4" name="message" id="message" placeholder="Your message" required=""></textarea>
-            <input type="submit" value="Send">
-            <button id="submitButton" value="send">Send message</button>
+            <button type="submit" id="submitButton" value="send">Send message</button>
         </form>
     </section>
 
