--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
     <script src="https://use.fontawesome.com/b21321acbe.js"></script>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
       $(document).ready(function () {
@@ -34,7 +34,7 @@
     <div class="navigation-container">
         <p class="navigation-logo">
             <a href="#intro">
-                <img src="img/andrzej.jpg"" alt="">
+                <img src="images/andrzej.jpg"" alt="">
             </a>
             <nav class="navigation-buttons">
                 <ul>
@@ -63,24 +63,24 @@
         <ul id="skills">
             <li>Advanced
                 <div>
-                    <img src="./img/indesign-cc.svg">
-                    <img src="./img/adobe-illustrator-cc.svg">
-                    <img src="./img/photoshop-cc.svg">
+                    <img src="images/indesign-cc.svg">
+                    <img src="images/adobe-illustrator-cc.svg">
+                    <img src="images/photoshop-cc.svg">
                 </div>
             </li>
             <li>Improved
                 <div>
-                    <img src="./img/html.png">
-                    <img src="./img/css.png">
-                    <img src="./img/js.png">
-                    <img src="./img/jquery.png">
-                    <img src="./img/react.png">
+                    <img src="images/html.png">
+                    <img src="images/css.png">
+                    <img src="images/js.png">
+                    <img src="images/jquery.png">
+                    <img src="images/react.png">
                 </div>
             </li>
             <li>For fun
                 <div>
-                    <img src="./img/finale-logo.png">
-                    <img src="./img/sigil-logo.png">
+                    <img src="images/finale-logo.png">
+                    <img src="images/sigil-logo.png">
                 </div>
             </li>
             <li>Badges
