--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://pl.linkedin.com/in/andrzejpuzynski88">
+                <a href="https://pl.linkedin.com/in/andrzejpuzynski">
                     <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
                 </a>
             </li>
