Opening links to LinkedIn and Github in new tab

--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
     <div class="footer-bar-container">
         <ul>
             <li>
-                <a href="https://github.com/andrzejpuzynski/">
+                <a href="https://github.com/andrzejpuzynski/" target="_blank">
                     <i class="fa fa-github-square fa-lg " aria-hidden="true"></i>
                 </a>
             </li>
             <li>
-                <a href="https://pl.linkedin.com/in/andrzejpuzynski">
+                <a href="https://pl.linkedin.com/in/andrzejpuzynski" target="_blank">
                     <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
                 </a>
             </li>
