Adding pictrues to portfolio sectioon

--- a/index.html
+++ b/index.html
@@ -99,29 +99,27 @@
 
     <section id="portfolio" class="portfolio">
         <h2>MY PORTFOLIO</h2>
-        <ul>
-            <li>
+        <ul class="flex-container">
+            <li class="flex-item front-dreamers portfolio-box">
                 <a href="http://dreamers.jfdz6.is-academy.pl/index.html">Dreamers site Page</a>
                 <p>Team project. It was created during the Junior Front-End Developer course at <a
-                        href="http://infoshareacademy.com/">infoShare Academy.</p>
+                        href="http://infoshareacademy.com/">infoShare Academy.</a></p>
             </li>
-            <li>
+            <li class="flex-item front-snake portfolio-box">
                 <a href="https://andrzejpuzynski.github.io/jQuery-game/">jQuery game</a>
                 <p>Individual project existing in a team project. It was created during the Junior Front-End Developer
-                    course at <a href="http://infoshareacademy.com/">infoShare Academy.</p>
+                    course at <a href="http://infoshareacademy.com/">infoShare Academy.</a></p>
             </li>
-            <div class="clear"></div>
-            <li>
-                <a>eBooks</a>
+            <li class="flex-item front-szortal portfolio-box">
+                <a href="http://www.szortal.com/nawynos">eBooks</a>
                 <p>For several years I have been participating in the project <a href="http://www.szortal.com/nawynos">"Szortal
                     na Wynos"</a>. I prepare the monthly magazine in three formats: PDF, EPUB and MOBI.</p>
             </li>
-            <li>
+            <li class="flex-item front-dtp portfolio-box">
                 <a>DTP and graphics</a>
                 <p>My previous work: the composition of magazines, books, preparing illustrations and graphics for them
                     (also the composition of music notes).</p>
             </li>
-            <div class="clear"></div>
     </section>
 
     <section id="contact-me" class="contact-me">
