--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1">
     <title>Andrzej Puzynski - PERSONAL PORTFOLIO</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
@@ -152,7 +153,6 @@
                 <p>© Andrzej Puzyński 2017</p>
             </li>
         </ul>
-        <!--<p>© Andrzej Puzyński 2017</p>-->
     </div>
 </footer>
 
