Fixing countig first small and upper letter in Stats

--- a/portfolio/textprocessor.html
+++ b/portfolio/textprocessor.html
@@ -78,6 +78,11 @@
                 <button type="button" class="btn btn-primary align-self-center" onclick="textRemove.wordsIncludingInLongerWords()">REMOVE</button>
                 <div class="align-self-center mx-2">words including in longer words</div>
             </div>
+            <div class="d-flex flex-row my-2">
+                <button type="button" class="btn btn-primary align-self-center" onclick="textRemove.wordsNotIncludingFirstLetterFromInput()">REMOVE</button>
+                <div class="align-self-center mx-2">words not starting with a letter 
+                    <input class="form-control" type="text" placeholder="" id="firstLetterOfWord" style="width: 70px; height: 23px; display: inline"></div>
+            </div>
 
          
             <div class="d-flex flex-row my-2">
