--- a/portfolio/textprocessor.html
+++ b/portfolio/textprocessor.html
@@ -103,6 +103,14 @@
                 <button type="button" class="btn btn-info align-self-center" onclick="textProcess.addAtEndOfTheWordsCharacter()">PROCESS</button>
                 <div class="align-self-center mx-2">add at end of <input class="form-control" type="text" placeholder="10" id="numberOfWords" style="width: 70px; height: 23px; display: inline"> words character <input class="form-control" type="text" placeholder="," id="characterToAdding" style="width: 60px; height: 23px; display: inline"> (random)</div>
             </div>
+            <div class="d-flex flex-row my-2">
+                <button type="button" class="btn btn-info align-self-center" onclick="textProcess.wrapTheWordsWithSimpleQuotes()">PROCESS</button>
+                <div class="align-self-center mx-2">wrap <input class="form-control" type="text" placeholder="10" id="numberOfWordsforSimpleQuotes" style="width: 70px; height: 23px; display: inline"> words with single quotes (random)</div>
+            </div>
+            <div class="d-flex flex-row my-2">
+                <button type="button" class="btn btn-info align-self-center" onclick="textProcess.wrapTheWordsWithDoubleQuotes()">PROCESS</button>
+                <div class="align-self-center mx-2">wrap <input class="form-control" type="text" placeholder="10" id="numberOfWordsforDoubleQuotes" style="width: 70px; height: 23px; display: inline"> words with double quotes (random)</div>
+            </div>
 
         </div>  
             
