Adding button: REMOVE words starting with a specific letter

--- a/portfolio/textprocessor.html
+++ b/portfolio/textprocessor.html
@@ -81,7 +81,14 @@
             <div class="d-flex flex-row my-2">
                 <button type="button" class="btn btn-primary align-self-center" onclick="textRemove.wordsNotIncludingFirstLetterFromInput()">REMOVE</button>
                 <div class="align-self-center mx-2">words not starting with a letter 
-                    <input class="form-control" type="text" placeholder="" id="firstLetterOfWord" style="width: 70px; height: 23px; display: inline"></div>
+                    <input class="form-control" type="text" placeholder="" id="firstLetterOfWord" style="width: 70px; height: 23px; display: inline">
+                </div>
+            </div>
+            <div class="d-flex flex-row my-2">
+                <button type="button" class="btn btn-primary align-self-center" onclick="textRemove.wordsIncludingFirstLetterFromInput()">REMOVE</button>
+                <div class="align-self-center mx-2">words starting with a letter 
+                    <input class="form-control" type="text" placeholder="" id="firstLetterOfWordToIncluding" style="width: 70px; height: 23px; display: inline">
+                </div>
             </div>
 
          
