Adding button: divide the text into equal parts

--- a/portfolio/textprocessor.html
+++ b/portfolio/textprocessor.html
@@ -106,6 +106,12 @@
                 <button type="button" class="btn btn-info align-self-center" onclick="textProcess.divideTextOnCertainCharacters()">PROCESS</button>
                 <div class="align-self-center mx-2">divide the text into parts of no more than <input class="form-control" type="text" placeholder="1000" id="lenghtOfTextAfterDividing" style="width: 70px; height: 23px; display: inline"> characters</div>
             </div>
+
+            <div class="d-flex flex-row my-2">
+                <button type="button" class="btn btn-info align-self-center" onclick="textProcess.divideTextOnEqualParts()">PROCESS</button>
+                <div class="align-self-center mx-2">divide the text into equal parts with a length of <input class="form-control" type="text" placeholder="10" id="lenghtOfEqualParts" style="width: 70px; height: 23px; display: inline"> characters</div>
+            </div>
+
             <div class="d-flex flex-row my-2">
                 <button type="button" class="btn btn-info align-self-center" onclick="textProcess.addAtEndOfTheWordsCharacter()">PROCESS</button>
                 <div class="align-self-center mx-2">add at end of <input class="form-control" type="text" placeholder="10" id="numberOfWords" style="width: 70px; height: 23px; display: inline"> words character <input class="form-control" type="text" placeholder="," id="characterToAdding" style="width: 60px; height: 23px; display: inline"> (random)</div>
