--- a/portfolio/textprocessor.html
+++ b/portfolio/textprocessor.html
@@ -132,6 +132,10 @@
                 <button type="button" class="btn btn-info align-self-center" onclick="textProcess.wrapTheWordsWithSquareBrackets()">PROCESS</button>
                 <div class="align-self-center mx-2">wrap <input class="form-control" type="text" placeholder="10" id="numberOfWordsforSquareBrackets" style="width: 70px; height: 23px; display: inline"> words with square brackets (random)</div>
             </div>
+            <div class="d-flex flex-row my-2">
+                <button type="button" class="btn btn-info align-self-center" onclick="textProcess.wrapTheWordsWithBackticks()">PROCESS</button>
+                <div class="align-self-center mx-2">wrap <input class="form-control" type="text" placeholder="10" id="numberOfWordsforBackticks" style="width: 70px; height: 23px; display: inline"> words with backticks (random)</div>
+            </div>
 
         </div>  
             
