--- a/portfolio/textprocessor.html
+++ b/portfolio/textprocessor.html
@@ -139,6 +139,10 @@
             <div class="d-flex flex-row my-2">
                 <button type="button" class="btn btn-info align-self-center" onclick="textProcess.wrapTheWordsWithCurlyBrackets()">PROCESS</button>
                 <div class="align-self-center mx-2">wrap <input class="form-control" type="text" placeholder="10" id="numberOfWordsforCurlyBrackets" style="width: 70px; height: 23px; display: inline"> words with curly brackets (random)</div>
+            </div>  
+            <div class="d-flex flex-row my-2">
+                <button type="button" class="btn btn-info align-self-center" onclick="textProcess.wrapTheWordsWithRoundBrackets()">PROCESS</button>
+                <div class="align-self-center mx-2">wrap <input class="form-control" type="text" placeholder="10" id="numberOfWordsforRoundBrackets" style="width: 70px; height: 23px; display: inline"> words with round brackets (random)</div>
             </div>
 
         </div>  
