--- a/portfolio/textprocessor.html
+++ b/portfolio/textprocessor.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous" />
   <title>Textprocessor</title>
 </head>
-<body class="no-gutters">
+<body>
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Textprocessor</a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -24,7 +24,7 @@
       </ul>
     </div>
   </nav>
-  <div id="main" class="row align-content-start" style="min-height: 100vh; max-height: auto">
+  <div id="main" class="no-gutters row align-content-start" style="min-height: 100vh; max-height: auto">
     <div class="pl-4 pr-4 pb-5 col-12 col-lg-8" id="processingText" style="padding-top: 60px">
       <h1>Processing text</h1>
       <div class="form-group">
@@ -201,8 +201,8 @@
       <table class="letters"></table>
     </div>
   </div>
-  <div id="about" class="row align-content-start" style="padding-top: 60px; color: steelblue; background-color: lightcyan; min-height: 100vh; max-height: auto">
-    <div class="pl-4 pr-4 col-12">
+  <div id="about" class="no-gutters row align-content-start" style="padding-top: 60px; color: steelblue; background-color: lightcyan; min-height: 100vh; max-height: auto">
+    <div class="pr-4 col-12" style="padding-left: 24px">
       <h1>About</h1>
       <p></p>
       <p>The Textprocessor Project is the tool for processing various text strings. I created it to preparing texts for touch typing excersises.</p>
